Fixing BM meny speed + fixing alignment issues + reorganisation the global layout

--- a/src/App.css
+++ b/src/App.css
@@ -41,14 +41,13 @@
   grid-row: 1;
   display: flex;
   justify-content: space-between;
-  padding-right:1.2em;
+  align-items: center;
+  padding-right: 1.2em;
 }
 
 .header-logo {
   position: relative;
-  /* top: 7px;
-  left: 100px; */
-  margin-left:5.2em;
+  margin-left: -12.2em;
 }
 
 .header-logo-text {
@@ -65,9 +64,7 @@
 }
 
 .header-burger-menu {
-  position: absolute;
-  top: 15px;
-  left: 10px;
+  margin-left: 1.3em;
 }
 
 /* .alice-carousel__wrapper {
@@ -126,7 +123,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height:100%;
+  height: 100%;
   margin-left: 1.8em;
   justify-content: center;
   align-items: center;
@@ -138,18 +135,17 @@
   font-size: 30px;
   font-weight: 700;
   color: #fff;
-  width: 49%;
+  align-items: center;
 }
 
 .section-text {
   padding-top: 8px;
   font-family: inherit;
   display: flex;
-  justify-content: flex-start;
+  align-items: center;
   width: 70%;
   color: #fff;
 }
-
 
 .section-buttons {
   display: flex;
@@ -172,7 +168,6 @@
 }
 
 .section-buttons button:hover {
-
   background-color: var(--wrapper-background-color);
   border: 1px solid var(--wrapper-background-color);
   color: #fff;
@@ -292,8 +287,6 @@
   background-color: #262626;
 }
 
-
-
 .img24 {
   filter: grayscale(80%);
   opacity: 0.8;
@@ -318,7 +311,7 @@ div.alice-carousel__next-btn {
   display: none;
 }
 
-.alice-carousel ul li img{
+.alice-carousel ul li img {
   display: flex;
   height: 350px;
   width: 50%;
@@ -413,31 +406,32 @@ blockquote {
 
 .alice-carousel__wrapper {
   width: 800px !important;
- 
 }
 
-.section-carousel .alice-carousel__wrapper{
+.section-carousel {
+  height: 100%;
+}
+
+.section-carousel .alice-carousel__wrapper {
   display: flex;
   align-content: center;
-  width:100%;
+  width: 100%;
+  height: 100%;
   width: 400px !important;
-  margin-right:1.2em;
-
-  
+  margin-right: 0.5em;
 }
 
-.section-carousel .alice-carousel ul li img{
-  /* height: 100%; */
+.section-carousel .alice-carousel ul li img {
+  height: 100%;
   width: 100%;
-  object-fit: cover;
+
+  /* height:490px; */
 }
 
 .sliderimg {
-  width: 100%;
-  height: 260px;
   object-fit: cover;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
-  /* -webkit-filter: blur(1px); /* Safari 6.0 - 9.0 */
-  /* filter: blur(1px); */ 
-} 
+  border: 2px solid #000;
+  box-shadow: 2px 2px 8px 12px rgba(0, 0, 0, 0.8);
+}
